--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,41 @@
-.App-body {
+body {
+  background : whitesmoke;
+}
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  text-align: center;
-  min-height: 100vh;
-}
-
-.table,
-th,
-td {
-  border: none;
-}
-
-.currencyTable {
-  width: 50%;
-  background-color: #090c1f;
-  border-collapse: collapse;
-  font-size: 32px;
-  border-radius: 15px;
-  -moz-border-radius: 15px;
-  overflow: hidden;
-  color: red;
-}
-
-.currencyTable td {
-  padding: 15px;
-}
-
-.currencyTable th {
-  padding: 20px;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  border-bottom: 2px solid white;
 }
 
-.currencyTable td {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+.App-link {
+  color: #61dafb;
 }
 
-p {
-  text-align: left;
-  font-weight: 300;
-  line-height: 24px;
-}
-
-p a {
-  font-weight: 500;
-  color: white;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
